kube/service/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stg
  name: web
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
